src/Scss/_notes.scss
@import './variables';

.note-card{
    padding-bottom: 0em;
    text-align: start;
    border-radius: 10px !important;
    overflow: inherit !important;
    position: relative;
    &:hover{
        box-shadow: $box-shadow-general;
        .select-button{
            display: block !important;
        }
        .pin-button{
            display: block !important;
        }
        .note-actions{
            padding: 8px 0px !important;
            display: block !important;
        }
        .note-action-buttons .button{
            display: block !important;
        }
    }
}

.note-row{
    min-height: 10em;
}

.note-list{
    margin-top: 1em !important;
    margin-bottom: 1em !important;
}

.note-list-name{
    display: flex !important;
    padding: 1em !important;
}

.note{
    justify-content: center;
    font-family: $sans-font !important;
    letter-spacing: $letter-spacing;
}

.note-content{
    padding: 0em 1em !important;
    max-height: 18em;
    overflow: hidden;
}

.card-title{
    padding:  1.5em 1em 1em 1em !important;
    h6{
        font-weight: 600 !important;
        font-size: 1em !important;
    }
}

.note-content.checklist{
    padding-inline-start: 0.5em !important;
    margin-block-start: 0em !important;
    margin-block-end: 0em !important;
}

.list-check-icon{
    padding: 0 !important;
    svg{
        height: 18px;
        width: 18px;
    }
}

.list-item-checklist{
    display: flex;
    justify-content: space-between;
    border-radius: 30px;
    padding-top: 0em !important;
    cursor: pointer;
    &:hover{
        background-color: $light-gray;
    }
}


.list-item-icon{
    min-width: 15px !important;
    margin-top: 4px;
    margin-bottom: 4px;
    align-self: baseline;
}


.note-action-buttons{
    max-width: 100%;
    justify-content: flex-end;
    padding-top: 1em !important;
    div{
        display: flex;
        justify-content: space-evenly;
        padding-left: 0.5em;
    }
}




.note-actions{
    padding: 21px 0px !important;
    display: block !important;
}

.select-button{
    position: absolute !important;
    top: -20px;
    left: -4%;
    display: none !important;
}

.pin-button{
    position: absolute !important;
    right: 0%;
    display: none !important;
}

.pin-button-new{
    position: absolute !important;
    right: 4%;
    cursor: pointer !important;
    z-index: 2;
}

.note-action-buttons .button{
    display: none !important;
    svg{
        height: 18px;
        width: 18px;
    }
    padding: 4px;
}

.new-note-small{
    box-shadow: $box-shadow-general !important;
    padding: 0em 1em !important;
    margin: 1em 0em 1em 0em !important;
    border-radius: 0.5em;
    display: flex;
    justify-content: space-between;
}

.new-note-big{
    box-shadow: $box-shadow-general !important;
    padding: 0.25em 1em !important;
    margin: 1em 0em 3em 0em !important;
    border-radius: 0.5em;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    position: relative;
}

.new-note-input{
    font-weight: 600 !important;
    width:50% !important;
}

.new-note-title-input{
    padding: 0.5em 0em 1em 0em !important;
    font-size: 0.9em !important;
    font-weight: 600 !important;
}

.new-note-text-input{
    padding: 0em 0em 0em 0em !important;
    font-size: 0.85em !important;
    font-weight: 600 !important;
}

.new-note-buttons{
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
}


.modal-body-note{
    padding: 0em 1em !important;
    min-height: 40vh;
    min-width: 40vw;
    border-radius: 5px;
    position: absolute !important;
    align-items: center !important;
    justify-content: center !important;
    top: 50% !important;
    left: 50% !important;
    transform: translate( -50%, -50%);
    background-color: $background-color;
    box-shadow: $box-shadow-general;
    &:focus{
        outline: none !important;
    }
    .note-card-edit{
        padding-bottom: 0em;
        text-align: start;
        border-radius: 10px !important;
        overflow: inherit !important;
        position: relative;
        border: none !important;
    }
    .pin-button-edit{
        position: absolute !important;
        right: 0px;
        top: 10px;
        z-index: 2;
        display: block !important;
    }
    .note-actions-edit{
        padding: 10px 0px !important;
        display: block !important;
        width: 70%;
    }
    .note-title{
        padding:  1.5em 1em 1em 1em !important;
        width: 100%;
    }
    .note-title label{
        padding:  1.5em 1em 1em 1em !important;
    }
    .note-content{
        width: 100%;
        padding:  1.5em 1em 1em 1em !important;
        min-height: 10em;
        display: flex;
        align-items: flex-start;
    }
    .note-content label{
        padding:  1.5em 1em 1em 1em !important;
    }
    .note-action-buttons-edit{
        max-width: 100%;
        justify-content: flex-end;
        padding-top: 0.5em !important;
        padding-bottom: 0.5em !important;
        div{
            display: flex;
            justify-content: space-evenly;
            padding-left: 0.5em;
        }
    }
    .note-action-buttons-edit .button{
        svg{
            height: 18px;
            width: 18px;
        }
        padding: 4px;
        display: block !important;
    }
    .modal-buttons-edit{
        display: flex;
        align-items: center;
        justify-content: space-around;
    }
    .modal-buttons-edit-close{
        display: flex;
        justify-content: flex-end;
        padding: 10px 0px !important;
    }
}

.new-note-icon{
    padding: 0.5em 0.5em !important;
    margin: 0em 0.2em !important;
    svg{
        width: 16px !important;
        height: 16px !important;
    }
}

.new-note-close-button{
    font-family: $sans-font !important;
    display: flex;
    align-items: center;
    justify-content: center;
}

